# snail

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELP.md  LICENSE  README.en.md  README.md  TODO.md  WIKI.md  cmd.txt  pom.xml  start.cmd
.gitee/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ----.md  issues.md
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  maven.yml  package.yml  release.yml
.workflow/: dev.yml  gitee.yml
SnailLauncher/: CMakeLists.txt  README.md  snail.ini
SnailLauncher/src/: CMakeLists.txt  ReadMe.txt  Resource.h  SnailLauncher.cpp  SnailLauncher.h  SnailLauncher.rc  SnailLauncher.vcxproj  SnailLauncher.vcxproj.filters  resource.h  snail.ini  stdafx.h  targetver.h
SnailLauncher/src/RES/: SnailLauncher.rc2
builder/: .gitignore  README.md  build.bat  build.sh  clean.bat  clean.sh  config.bat  config.sh  startup.bat  startup.cmd  startup.sh  质量检测.md
doc/: 任务.md  规范.md  质量检测.md
docs/: API.md  Android.md  CODE_OF_CONDUCT.md  GUI.md  HELP.md  PROTOCOL.md  TEST.md  TODO.md  build.sh  torrent.properties
docs/associations/: torrent.properties
docs/logo/: logo.icns
launcher/: SnailLauncher.cpp
snail/: .gitignore  LICENSE  pom.xml
snail-android/: README.md
snail-extend/: README.md  pom.xml
snail-javafx/: .gitignore  LICENSE  README.md  pom.xml
snail-javafx/SnailLauncher/: CMakeLists.txt
snail-javafx/builder/: clean.bat  config.bat  startup.bat
(+2148 files in other folders)
